--- a/_config.yml
+++ b/_config.yml
@@ -50,8 +50,8 @@ survey_url: "http://goo.gl/forms/OXNe5kB8ao"
 #========================================
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: fed136
-  secondary: fec503
+  primary: a01c25
+  secondary: 931C25
   secondary-dark: 333
 
 # Build settings
