Adding myself as a participant as suggested in the readme.

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -60,3 +60,10 @@
   interests:
     - Graph Theory
     - Data Science
+
+- name: Steven Wu
+  affiliation: Simon Fraser University
+  github: stevenwu4
+  interests:
+    - Sports Statistics
+    - Open Science
