Updated my affiliation.

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -34,7 +34,7 @@
     - Data Science
 
 - name: Dan Fornika
-  affiliation: Morin Lab, Simon Fraser University
+  affiliation: Fusion Genomics
   github: dfornika
   interests:
     - Experimental Design & Planning
