Add time and place of sessions prominently (fixes #86)

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ language: en
 # None of these things need to be changed - but feel free!
 
 titleBackground: "https://s3-us-west-2.amazonaws.com/webmaker-kits/learning%402x.jpg"
-headlineSmall: "Welcome To the Scientific Programming Study Group at SFU!"
+headlineSmall: "Join us Mondays at 10:30 am in the SFU Research Commons"
 headlineMain: "Let's Work Together"
 
 # Setup Google Calendar
