added myself to members.yml

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -67,3 +67,12 @@
   interests:
     - Sports Statistics
     - Open Science
+
+- name: Alex Razoumov
+  affiliation: WestGrid
+  github: razoumov
+  interests:
+    - Computational Astrophysics
+    - Computational Fluid Dynamics
+    - HPC
+    - Visualization
