postponed the rest of spring 2020 workshops

--- a/_data/en.yml
+++ b/_data/en.yml
@@ -18,7 +18,7 @@ activities:
     icon: fa-group
 
 events: Workshops
-eventsSubheading: Our upcoming and past workshops
+eventsSubheading: To maximize social distancing, and in accordance with the BC Provincial Health recommendations, SciProg will cancel all remaining workshops for the Spring 2020 term. We will resume our workshop series once SFU activities are approved to go back to normal. In the meantime, please stay in touch via our <a href="https://join.slack.com/t/sciprogworkspace/shared_invite/zt-cwwsnm7a-rDopkO~Ggn6kyHwf7~NN9w">Slack Group</a>.
 eventPlaceholder: Nothing yet! Propose an event here.
 suggestEvent: Suggest an Event
 seeEvents: See all Events
